--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -63,7 +63,10 @@ img {
 }
 .del{
   visibility: hidden;
-  
+}
+.headMsg{
+  display: flex;
+    justify-content: space-between;
 }
 .flex {
   display: flex;
