Ideas de como intentar solucionar error de seguridad Solo comments, codigo no implementado

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -24,12 +24,14 @@
             <ion-text
               ><b>{{ message.user }}:</b><br
             /></ion-text>
-            <ion-icon
-              name="trash-outline"
-              (click)="onDelete(message)"
-              class="del"
-              item-right
-            ></ion-icon>
+            <!-- Probar a poner el span con el pointer events none en el css del icon (aunque no creo que funcione) -->
+            <span title="Borrar mensaje">
+              <ion-icon
+                name="trash-outline"
+                (click)="onDelete(message)"
+                class="del"
+                item-right
+              ></ion-icon></span>
           </ion-row>
           <ion-label class="ion-text-wrap" *ngIf="message.type === 'txt'">
             {{ message.text }}
