--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -1,64 +1,100 @@
-.header{
-    color: #3673cf;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 800;
-    font-style: italic;
-    text-shadow: 0px 0px 2px #3673cf;
+.header {
+  color: #3673cf;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+  text-shadow: 0px 0px 2px #3673cf;
 }
-.logout{
-    filter: drop-shadow(0px 0px 2px rgba(54, 115, 207, 0.5));
-}
-
-.loadingSpinner{
-    --color: #3673cf;
-    size: 10px;
+.logout {
+  filter: drop-shadow(0px 0px 2px rgba(54, 115, 207, 0.5));
+  padding-right: 0.5rem;
 }
 
-.scroll{
-    position: fixed;
-    transform: rotate(90deg);
-    color: white;
-    right: 30px; 
-    bottom: 70px;
-    border-radius: 10px;
-    background-color: #3673cf;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    font-size: 25px;
-    padding: 7px;
+ion-input {
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  border-radius: 5px;
+  color: white;
+}
+ion-button {
+  --background: #3689ff;
+}
+ion-button.enviar {
+  --background: #3689ff;
+  margin: 10px;
+  margin-left: auto;
+  border-radius: 5px;
+  height: auto;
+  transition: 0.3s;
+}
+ion-button.camera {
+  --background: #3689ff;
+  margin: 10px;
+  margin-left: auto;
+  border-radius: 5px;
+  height: auto;
+  transition: 0.3s;
+}
+
+img {
+  margin-top: 0.25rem;
+  border-radius: 5px;
+}
+
+.other {
+  display: flex;
+  flex-direction: column;
+  background-color: #dadae0;
+  margin: 0.5rem 0.5rem 0.25rem 0.4rem;
+  padding: 0.5rem;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  color: #3689ff;
+  width: fit-content;
+  max-width: 22rem;
+  transition: 0.3s;
+  border-radius: 0.5rem;
+  ion-item {
+    --background: #dadae0;
+    ion-label {
+      --color: #3689ff;
+      text-align: left;
+    }
+  }
+}
+.del{
+  visibility: hidden;
+}
+.headMsg{
+  display: flex;
+    justify-content: space-between;
+}
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  align-content: flex-end;
+  .own {
+    background-color: #3689ff;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-    user-select: none; 
-    transition: opacity 0.3s linear;
-}
-.scroll:hover{
-    background-color: rgb(255, 255, 255);
-    color: #3673cf;
-    transition: 0.3s;
-    user-select: none; 
-}
-
-ion-input{
-    background-color: rgba(0, 0, 0, 0.2);
-    margin: 10px;
-    border-radius: 5px;
+    margin: 0.5rem 0.4rem 0 0.5rem;
+    padding: 0.25rem;
     color: white;
-}
-ion-button{
-    --background: #3689ff;
-}
-ion-button.enviar{
-    --background: #3689ff;
-    margin: 10px;
-    margin-left: auto;
-    border-radius: 5px;
-    height: auto;
+    width: fit-content;
     transition: 0.3s;
+    max-width: 22rem;
+    ion-item {
+      --background: #3689ff;
+    }
+    border-radius: 0.5rem;
+  }
+  .own:hover{
+    .del{
+      visibility: visible;
+      pointer-events: none;
+    }
+  }
 }
-
-// ion-item.msg{
-//     padding-left: 5px;
-//     padding-top: 5px
-// }
-
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,800&display=swap');
+.hydrated {
+  text-align: justify;
+}
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,800&display=swap");
