--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -32,7 +32,7 @@
           <ion-label class="ion-text-wrap" *ngIf="message.type === 'txt'">
             {{ message.text }}
           </ion-label>
-          <img src="{{ message.text }}" *ngIf="message.type === 'img'" />
+          <img src="{{ message.text }}" *ngIf="message.type === 'img'" class="img" />
         </div>
       </div>
     </ion-infinite-scroll-content>
