--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -5,9 +5,17 @@
   font-style: italic;
   text-shadow: 0px 0px 2px #3673cf;
 }
-.logout {
-  filter: drop-shadow(0px 0px 2px rgba(54, 115, 207, 0.5));
+.logoutBut {
+  // filter: drop-shadow(0px 0px 2px rgba(54, 115, 207, 0.5));
   padding-right: 0.5rem;
+}
+.menuBut {
+  filter: drop-shadow(0px 0px 2px rgba(54, 115, 207, 0.5));
+  padding-left: 0.5rem;
+}
+
+.menu{
+  --width: 45%
 }
 
 ion-input {
@@ -17,10 +25,11 @@ ion-input {
   color: white;
 }
 ion-button {
-  --background: #3689ff;
+  // --background: #3689ff;
+  border-radius: 5px;
 }
 ion-button.enviar {
-  --background: #3689ff;
+  // --background: #3689ff;
   margin: 10px;
   margin-left: auto;
   border-radius: 5px;
@@ -28,7 +37,7 @@ ion-button.enviar {
   transition: 0.3s;
 }
 ion-button.camera {
-  --background: #3689ff;
+  // --background: #3689ff;
   margin: 10px;
   margin-left: auto;
   border-radius: 5px;
