Tema nocturno añadido, falta guardar datos

--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -118,4 +118,7 @@ img {
   max-height: 24rem
 }
 
+ion-icon {
+  color: #3689ff
+}
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,800&display=swap");
