Modo oscuro acabado

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -9,8 +9,8 @@
   <ion-content class="ion-padding">
     <ion-list>
       <ion-item title="Tema">
-        <ion-text color="primary">Tema nocturno</ion-text>
-          <ion-toggle id="themeToggle" (click)="onChangeTheme()" [checked]="darkTheme" slot="end"></ion-toggle>
+        <ion-text color="primary">Modo oscuro</ion-text>
+          <ion-toggle id="themeToggle" [checked]="darkTheme" slot="end"></ion-toggle>
     </ion-item>
     <ion-item>
       <ion-menu-toggle>
