--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -256,6 +256,18 @@
   --ion-color-light-tint: #f5f6f9;
 }
 
+.peque{
+  font-size: smaller;
+}
+
+.normal{
+  font-size: medium;
+}
+
+.grande{
+  font-size: larger;
+}
+
 // @media (prefers-color-scheme: dark) {
 //   /*
 //    * Dark Colors
