--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -14,6 +14,16 @@
       ></ion-input>
     </ion-item>
     <ion-item>
+      <ion-label position="floating">Nombre de usuario</ion-label>
+      <ion-input
+        required
+        formControlName="username"
+        type="text"
+        minlength="3"
+        (keyup.enter)="onRegister()"
+      ></ion-input>
+    </ion-item>
+    <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input
         required
