--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,4 +1,3 @@
-
 <ion-menu contentId="main-content" class="menu">
   <ion-header [translucent]="true">
     <ion-toolbar color="light">
@@ -47,56 +46,51 @@
         </ion-row>
       </ion-toolbar>
     </ion-header>
+    
     <ion-content class="ion-padding">
       <ion-list>
-        <ion-item>
-          <ion-text color="primary">Modo oscuro</ion-text>
-          <ion-icon
-            name="moon-outline"
-            class="darkIcon"
-            slot="end"
-            *ngIf="darkTheme == 'true'"
-          ></ion-icon>
-          <ion-icon
-            name="sunny-outline"
-            class="darkIcon"
-            slot="end"
-            *ngIf="darkTheme == 'false'"
-          ></ion-icon>
-          <ion-toggle
-            #themeToggle
-            id="themeToggle"
-            [checked]="darkTheme"
-            slot="end"
-          ></ion-toggle>
-        </ion-item>
         <ion-item>
           <ion-text color="primary">Tamaño de la fuente: </ion-text>
           <ion-select
             interface="popover"
             placeholder="{{ fontSize }}"
             (ionChange)="onSelectFontSize($event)"
+            slot="end"
           >
             <ion-select-option value="Pequeña">Pequeña</ion-select-option>
             <ion-select-option value="Normal">Normal</ion-select-option>
             <ion-select-option value="Grande">Grande</ion-select-option>
           </ion-select>
         </ion-item>
+        <ion-item>
+          <ion-text color="primary" class="modalLabel">Cambiar nombre de usuario</ion-text>
+          <ion-input #changeUser id="changeUser" type="text" placeholder="{{username}}" class="modalInput"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-text color="primary" class="modalLabel">Cambiar contraseña</ion-text>
+          <ion-input #changePass id="changePass" type="password" class="modalInput" placeholder="******"></ion-input>
+        </ion-item>
       </ion-list>
 
-      <ion-footer>
-        <ion-toolbar>
-          <div class="modalToolbar">
-            <ion-buttons slot="start">
-              <ion-button (click)="onCloseModal()">Cerrar</ion-button>
-            </ion-buttons>
-            <ion-buttons slot="end">
-              <ion-button (click)="onSetDefaultValues()">Cargar valores por defecto</ion-button>
-            </ion-buttons>
-          </div>
-        </ion-toolbar>
-      </ion-footer>
     </ion-content>
+    
+    <ion-footer>
+      <ion-toolbar>
+        <div class="modalToolbar">
+          <ion-buttons>
+            <ion-button (click)="onSaveConfig()">Guardar los cambios</ion-button>
+          </ion-buttons>
+          <ion-buttons slot="start">
+            <ion-button (click)="onCloseModal()">Cerrar</ion-button>
+          </ion-buttons>
+          <ion-buttons slot="end">
+            <ion-button (click)="onSetDefaultValues()"
+              >Cargar valores por defecto</ion-button
+            >
+          </ion-buttons>
+        </div>
+      </ion-toolbar>
+    </ion-footer>
   </ng-template>
 </ion-modal>
 
@@ -134,10 +128,8 @@
       >
         <div class="own">
           <ion-row class="headMsg">
-            <ion-text
-              ><b>{{ message.user }}:</b><br
+            <ion-text><b>{{ message.username }}:</b><br
             /></ion-text>
-            <!-- Probar a poner el span con el pointer events none en el css del icon (aunque no creo que funcione) -->
             <span
               title="Borrar mensaje"
               class="del2"
@@ -164,6 +156,7 @@
   <ion-toolbar>
     <ion-row>
       <ion-input
+        #inputMessage
         type="text"
         placeholder="Escribe aquí"
         minlength="1"
