--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -53,7 +53,10 @@ img {
 }
 
 ion-modal{
-  --border-radius: 3px
+  --border-radius: 3px;
+  ion-content{
+    height: fit-content;
+  }
 }
 
 .darkIcon{
@@ -140,10 +143,16 @@ ion-icon {
 
 .modalToolbar{
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
 }
+
+// .modal{
+//   &::part(content){
+//     height: 50%; 
+//   }
+// }
 
 .modalContent{
   display: flex;
