--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -46,7 +46,7 @@
         </ion-row>
       </ion-toolbar>
     </ion-header>
-    
+
     <ion-content class="ion-padding">
       <ion-list>
         <ion-item>
@@ -67,31 +67,35 @@
           <ion-input #changeUser id="changeUser" type="text" placeholder="{{username}}" class="modalInput"></ion-input>
         </ion-item> -->
         <ion-item>
-          <ion-text color="primary" class="modalLabel">Cambiar contraseña</ion-text>
-          <ion-input #changePass id="changePass"type="password" class="modalInput" placeholder="******"></ion-input>
+          <ion-text color="primary" class="modalLabel"
+            >Cambiar contraseña</ion-text
+          >
+          <ion-input
+            #changePass
+            id="changePass"
+            type="password"
+            class="modalInput"
+            placeholder="******"
+          ></ion-input>
         </ion-item>
         <ion-item>
           <ion-text color="primary">Borrar cuenta</ion-text>
-          <ion-button (click)="onDeleteAccount()" color="light" slot="end">Borrar</ion-button>
+          <ion-button (click)="onDeleteAccount()" color="light" slot="end"
+            >Borrar</ion-button
+          >
         </ion-item>
       </ion-list>
-
     </ion-content>
-    
+
     <ion-footer>
       <ion-toolbar>
-        <div class="modalToolbar">
-          <ion-buttons>
-            <ion-button (click)="onSaveConfig()">Guardar los cambios</ion-button>
-          </ion-buttons>
-          <ion-buttons>
-            <ion-button (click)="onSetDefaultValues()"
-              >Cargar valores por defecto</ion-button>
-          </ion-buttons>
-          <ion-buttons>
-            <ion-button (click)="onCloseModal()">Cerrar</ion-button>
-          </ion-buttons>
-        </div>
+        <ion-button (click)="onSaveConfig()" expand="full" fill="clear"
+          >Guardar los cambios</ion-button
+        >
+        <ion-button (click)="onSetDefaultValues()" expand="full" fill="clear"
+          >Cargar valores por defecto</ion-button
+        >
+        <ion-button (click)="onCloseModal()" expand="full" fill="clear">Cerrar</ion-button>
       </ion-toolbar>
     </ion-footer>
   </ng-template>
@@ -138,8 +142,7 @@
             /></ion-text>
             <ion-text *ngIf="message.username != username && message.user == user"><b>{{ message.username }} (ahora conocido como {{username}}):</b><br
               /></ion-text> -->
-            <ion-text><b>{{ message.username }}:</b><br
-            /></ion-text>
+            <ion-text><b>{{ message.username }}:</b><br/></ion-text>
             <span
               title="Borrar mensaje"
               class="del2"
