Añadidos terminos y condiciones

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -33,6 +33,10 @@
         (keyup.enter)="onRegister()"
       ></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-checkbox slot="start" id="condition" formControlName="termsAgreed"></ion-checkbox>
+      <ion-label>Acepto los Términos y Condiciones de uso</ion-label>
+    </ion-item>
     <div class="flex">
       <div class="bot">
         <ion-button
