Corregido scroll al enviar mensaje en chat

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -124,7 +124,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-content" onload="scrollOnInit()" 
+<ion-content #mainContent class="ion-content" onload="scrollOnInit()" 
 [scrollEvents]="true"
 (ionScroll)="handleScroll($any($event))">
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
